mongo-depl.yaml
#####################################################################
#####################################################################
#####################################################################
#Creando el pod MongoDB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          # resources:
          # requests:
          #   memory: 200Mi
          #   cpu: 100m
          # limits:
          #   memory: 200Mi
          #   cpu: 100m
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
#####################################################################
#####################################################################
#####################################################################
# Servicio que expone al pod creado anteriormente
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  # por defecto es ClusterIP
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
