mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  # si el servicio es ClusterIP no es necesario especificarlo
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
