server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec: # Spec for deployment
  replicas: 3
  selector: # hace match con el pod a replicar
    matchLabels:
      app: server
  template: ##especificacion del pod que queremos crear
    metadata:
      name: server-pod
      labels:
        app: server
    spec: #Spec of the pod
      containers:
        - name: server
          image: laithharb/server:v1

---
# misma configuracion que tenia server-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    # por defecto toma el protocolo TCP
    - protocol: TCP
      port: 3000 # puerto donde levanta la app
      targetPort: 3000 # este es el port expuesto dentro del contenedor del pod(port donde levanta la app)
      # nodePort: 30005
