server-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  type: NodePort
  selector:
    app: server
  ports:
    # por defecto toma el protocolo TCP
    - protocol: TCP
      port: 3000 # puerto donde levanta la app
      targetPort: 3000 # este es el port expuesto dentro del contenedor del pod(port donde levanta la app)
      nodePort: 30005
