ingress-srv.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     # nginx.ingress.kubernetes.io/rewrite-target: /
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
# spec:
#   rules:
#     - host: lexferramirez.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: /api/?(.*)
#             backend:
#               service:
#                 name: server-srv
#                 port:
#                   number: 3000
#     - host: lexferramirez.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: /
#             backend:
#               service:
#                 name: client-srv
#                 port:
#                   number: 3000
#     - host: lexferramirez.com
#       http:
#         paths:
#           - pathType: Prefix
#             path: /test
#             backend:
#               service:
#                 name: client-srv2
#                 port:
#                   number: 3000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
    - host: lexferramirez.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: client-srv2
                port:
                  number: 3000
